# mate-disk-utility

./: AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
data/: Makefile.am  mate-disk.desktop.in  matepalimpsest.desktop.in  mdu-notification-daemon.desktop.in.in.in
data/icons/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile  Makefile.am
data/icons/24x24/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
help/: Makefile.am  matepalimpsest.omf.in
help/C/: index.docbook  legal.xml  matepalimpsest.xml
help/cs/: cs.po  index.docbook
help/de/: de.po  index.docbook
help/el/: el.po  index.docbook
help/es/: es.po  index.docbook
help/pl/: index.docbook  pl.po
help/pt_BR/: index.docbook  pt_BR.po
help/sv/: sv.po
help/zh_CN/: index.docbook  zh_CN.po
po/: POTFILES.in  ar.po  ast.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  es.po  eu.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  hy.po  id.po  it.po  ja.po  kn.po  ko.po  ku.po  lt.po  lv.po  mai.po  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  (+18 more)
src/: Makefile.am
src/caja-extension/: Makefile.am  caja-mdu.c  caja-mdu.h  caja-module.c
src/format-tool/: Makefile.am  mdu-format-progress-dialog.c  mdu-format-progress-dialog.h  mdu-format-tool.c
src/mate-disk/: Makefile.am  mdu-main.c  mdu-section-drive.c  mdu-section-hub.h  mdu-section-linux-lvm2-volume-group.h  mdu-section-linux-md-drive.h  mdu-section.h  mdu-shell.c  mdu-shell.h
src/matepalimpsest/: Makefile.am  mdu-main.c  mdu-section-drive.h  mdu-section-hub.c  mdu-section-linux-lvm2-volume-group.c  mdu-section-linux-md-drive.c  mdu-section-volumes.c  mdu-section-volumes.h  mdu-section.c  mdu-shell.c
src/mdu/: Makefile.am  mdu-adapter.c  mdu-adapter.h  mdu-callbacks.h  mdu-device.c  mdu-device.h  mdu-drive.c  mdu-drive.h  mdu-error.c  mdu-error.h  mdu-expander.c  mdu-expander.h  mdu-hub.c  mdu-hub.h  mdu-known-filesystem.c  mdu-known-filesystem.h  mdu-linux-lvm2-volume-group.c  mdu-linux-lvm2-volume-group.h  mdu-linux-lvm2-volume-hole.c  mdu-linux-lvm2-volume-hole.h  mdu-linux-lvm2-volume.c  mdu-linux-lvm2-volume.h  mdu-linux-md-drive.c  mdu-linux-md-drive.h  mdu-machine.c  mdu-machine.h  mdu-pool.c  mdu-pool.h  mdu-port.c  mdu-port.h  mdu-presentable.c  mdu-presentable.h  mdu-private.h  mdu-process.c  mdu-process.h  mdu-ssh-bridge.c  mdu-ssh-bridge.h  mdu-types.h  mdu-util.c  mdu-util.h  (+6 more)
src/mdu-gtk/: Makefile.am  mdu-add-component-linux-md-dialog.c  mdu-add-component-linux-md-dialog.h  mdu-add-pv-linux-lvm2-dialog.c  mdu-add-pv-linux-lvm2-dialog.h  mdu-ata-smart-dialog.c  mdu-ata-smart-dialog.h  mdu-button-element.c  mdu-button-element.h  mdu-button-table.c  mdu-button-table.h  mdu-confirmation-dialog.c  mdu-confirmation-dialog.h  mdu-connect-to-server-dialog.c  mdu-connect-to-server-dialog.h  mdu-create-linux-lvm2-volume-dialog.c  mdu-create-linux-lvm2-volume-dialog.h  mdu-create-linux-md-dialog.c  mdu-create-linux-md-dialog.h  mdu-create-partition-dialog.c  mdu-create-partition-dialog.h  mdu-details-element.c  mdu-details-element.h  mdu-details-table.c  mdu-details-table.h  mdu-dialog.c  mdu-dialog.h  mdu-disk-selection-widget.c  mdu-disk-selection-widget.h  mdu-drive-benchmark-dialog.c  mdu-drive-benchmark-dialog.h  mdu-edit-linux-lvm2-dialog.c  mdu-edit-linux-lvm2-dialog.h  mdu-edit-linux-md-dialog.c  mdu-edit-linux-md-dialog.h  mdu-edit-name-dialog.c  mdu-edit-name-dialog.h  mdu-edit-partition-dialog.c  mdu-edit-partition-dialog.h  mdu-error-dialog.c  (+24 more)
src/notification/: Makefile.am  mdu-slow-unmount-dialog.c  mdu-slow-unmount-dialog.h  notification-main.c
