NULL =

icondir = $(datadir)/icons/mate/22x22/apps
icon_DATA =				\
	matepalimpsest.png			\
	mdu-eject.png			\
	mdu-detach.png			\
	mdu-mount.png			\
	mdu-unmount.png			\
	mdu-raid-array.png		\
	mdu-raid-array-start.png	\
	mdu-raid-array-stop.png		\
	mdu-encrypted-lock.png		\
	mdu-encrypted-unlock.png	\
	mdu-smart-failing.png		\
	mdu-smart-threshold.png		\
	mdu-smart-healthy.png		\
	mdu-smart-unknown.png		\
	mdu-check-disk.png		\
	mdu-info.png			\
	mdu-error.png			\
	mdu-warning.png			\
	mdu-unmountable.png		\
	caja-mdu.png		\
	mdu-multidisk-drive.png		\
	mdu-hba.png			\
	mdu-expander.png		\
	mdu-category-multidisk.png	\
	mdu-category-multipath.png	\
	mdu-category-peripheral.png	\
	mdu-emblem-mp.png		\
	mdu-emblem-mp-component.png	\
	mdu-emblem-lvm-vg.png		\
	mdu-emblem-lvm-lv.png		\
	mdu-emblem-raid-linear.png	\
	mdu-emblem-raid0.png		\
	mdu-emblem-raid1.png		\
	mdu-emblem-raid3.png		\
	mdu-emblem-raid4.png		\
	mdu-emblem-raid5.png		\
	mdu-emblem-raid6.png		\
	mdu-emblem-raid10.png		\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~
