NULL =

icondir = $(datadir)/icons/mate/scalable/apps
icon_DATA =				\
	matepalimpsest.svg			\
	mdu-eject.svg			\
	mdu-detach.svg			\
	mdu-mount.svg			\
	mdu-unmount.svg			\
	mdu-raid-array.svg		\
	mdu-raid-array-start.svg	\
	mdu-raid-array-stop.svg		\
	mdu-encrypted-lock.svg		\
	mdu-encrypted-unlock.svg	\
	mdu-smart-failing.svg		\
	mdu-smart-threshold.svg		\
	mdu-smart-healthy.svg		\
	mdu-smart-unknown.svg		\
	mdu-check-disk.svg		\
	mdu-info.svg			\
	mdu-error.svg			\
	mdu-warning.svg			\
	mdu-unmountable.svg		\
	caja-mdu.svg		\
	mdu-multidisk-drive.svg		\
	mdu-hba.svg			\
	mdu-expander.svg		\
	mdu-category-multidisk.svg	\
	mdu-category-multipath.svg	\
	mdu-category-peripheral.svg	\
	mdu-emblem-mp.svg		\
	mdu-emblem-mp-component.svg	\
	mdu-emblem-lvm-vg.svg		\
	mdu-emblem-lvm-lv.svg		\
	mdu-emblem-raid-linear.svg	\
	mdu-emblem-raid0.svg		\
	mdu-emblem-raid1.svg		\
	mdu-emblem-raid3.svg		\
	mdu-emblem-raid4.svg		\
	mdu-emblem-raid5.svg		\
	mdu-emblem-raid6.svg		\
	mdu-emblem-raid10.svg		\
	$(NULL)

EXTRA_DIST = \
	$(icon_DATA)

clean-local :
	rm -f *~
